# riddler

./: .gitignore  pyproject.toml
src/: __main__.py
src/riddler/: __init__.py  admin.py  config.py  embeds.py  jsonable.py  marathon.py
